# TeslaPricing

./: .gitignore  .mcp.json  README.md  dev.sh  scrape.sh
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: deploy.yml  scrape.yml
backend/: package-lock.json  package.json  pyproject.toml  tesla_scrape.js
backend/app/: db.py  main.py  models.py  schemas.py
backend/scraper/: alcopa.js  aramisauto.js  capcar.js  capcar.py  cli.js  constants.js  db.js  gmecars.js  gmecars.py  lacentrale.js  lacentrale.py  lbauto.js  leboncoin.js  leboncoin.py  mobile_de.py  renew.js  run.py  tesla.js
backend/tests/: capcar.test.js  gmecars.test.js  leboncoin.test.js  tesla.test.js
frontend/: .env.production  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  Auctions.tsx  Compare.tsx  Details.tsx  Dropped.tsx  ListingDetail.tsx  Saved.tsx  SearchBar.tsx  Trends.tsx  api.ts  i18n.tsx  index.css  types.ts  useAuth.ts  useCompare.ts  useHidden.ts  useSaved.ts  utils.ts
